--- a/static/css/main-page.css
+++ b/static/css/main-page.css
@@ -5,6 +5,7 @@
   display: inline-block;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   min-width: 101px;
+  font-weight: bold;
 }
 .wrapper {
   width: 268px;
@@ -45,6 +46,7 @@
   padding: var(--padding-12xs) 0 0;
   box-sizing: border-box;
 }
+
 .frame-inner,
 .group-parent,
 .search-wrapper {
@@ -74,7 +76,9 @@
 .a1 {
   display: inline-block;
   min-width: 101px;
+  font-weight: bold;
 }
+
 .a1,
 .a2 {
   text-decoration: none;
@@ -82,6 +86,7 @@
   color: inherit;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+  font-weight: bold;
 }
 .wrapper1 {
   flex-direction: column;
@@ -100,6 +105,16 @@
   flex-direction: row;
   gap: var(--gap-10xl);
 }
+
+.parent2 a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.parent2 a:hover{
+    color: dodgerblue;
+}
+
 .frame,
 .frame-div {
   flex-direction: column;
@@ -311,6 +326,12 @@
   font-weight: 500;
   z-index: 1;
 }
+
+.mbti a {
+    text-decoration: none; /* 移除下劃線 */
+    color: inherit; /* 使用父元素的顏色 */
+}
+
 .analysis-icons {
   height: 83px;
   width: 262px;
@@ -331,10 +352,14 @@
   position: absolute;
   top: 24px;
   left: 84px;
+  font-size: var(--font-size-13xl);
   font-weight: 500;
+  font-family: var(--presets-body2);
+  color: var(--color-black);
   display: inline-block;
   min-width: 97px;
   z-index: 1;
+  text-align: center;
 }
 .analysis-icons1 {
   height: 83px;
@@ -789,6 +814,7 @@
   .parent2 {
     display: none;
   }
+
   .div11 {
     font-size: var(--font-size-10xl);
   }
