--- a/static/css/setting.css
+++ b/static/css/setting.css
@@ -1,215 +1,505 @@
-.frame-child1 {
-  height: 89px;
-  width: 1440px;
-  position: relative;
-  background-color: var(--color-gainsboro-300);
-  border: 1px solid var(--color-black);
-  box-sizing: border-box;
-  display: none;
-  max-width: 100%;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.a4 {
-  text-decoration: none;
-  align-self: stretch;
-  position: relative;
-  letter-spacing: -0.5px;
-  line-height: 26px;
-  font-weight: 500;
-  color: inherit;
-  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-  z-index: 1;
+
+body {
+  font-size: 14px;
 }
-.wrapper3 {
-  width: 100px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: var(--padding-lg) 0 0;
-  box-sizing: border-box;
-}
-.a5 {
-  text-decoration: none;
-  position: relative;
-  font-family: var(--presets-body2);
-  color: inherit;
-  text-align: center;
-  display: inline-block;
-  text-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
-  min-width: 101px;
-  z-index: 1;
-}
-.frame-header {
-  align-self: stretch;
-  background-color: var(--color-gainsboro-300);
-  border: 1px solid var(--color-black);
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: var(--padding-xs) 65px;
-  gap: var(--gap-485xl);
-  top: 0;
-  z-index: 99;
-  position: sticky;
-  max-width: 100%;
-  text-align: left;
-  font-size: var(--font-size-31xl);
-  color: var(--color-black);
-  font-family: var(--font-raleway);
-}
-.pxl-20210309-203454756-1-icon1 {
-  height: 100%;
+.user_frame {
   width: 100%;
-  object-fit: contain;
+  height: 1024px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
   position: absolute;
-  left: 0;
-  top: 2px;
-  transform: scale(1.201);
-}
-.wrapper-pxl-20210309-203454756 {
-  height: 139px;
-  width: 145px;
-  position: relative;
-  border-radius: var(--br-9xs);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.wrapper-pxl-20210309-203454756-wrapper {
-  align-self: stretch;
-  height: 139px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 0 var(--padding-xl);
-  box-sizing: border-box;
-}
-.iconedit {
-  height: 30px;
-  width: 29px;
-  position: relative;
+  top: 0px;
+  left: 0px;
   overflow: hidden;
-  flex-shrink: 0;
 }
-.edit-icon,
-.edit-icon-wrapper {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-}
-.edit-icon {
-  height: 43.4px;
-  width: 41.5px;
-  box-shadow: var(--elevation);
-  border-radius: var(--br-81xl);
-  background-color: var(--palette-white);
-  justify-content: flex-start;
-  padding: var(--padding-5xs) var(--padding-9xs) var(--padding-5xs)
-    var(--padding-5xs);
-  box-sizing: border-box;
-}
-.edit-icon-wrapper {
-  align-self: stretch;
-  justify-content: center;
-  padding: 0 var(--padding-xl) 0 var(--padding-2xl);
-}
-.brain,
-.juliamariomailcom {
-  align-self: stretch;
-  position: relative;
-}
-.brain {
-  letter-spacing: -0.5px;
-  line-height: 32px;
-}
-.juliamariomailcom {
-  font-size: var(--body-text-size);
-  line-height: 18px;
-  font-weight: 500;
-  white-space: nowrap;
-}
-.profile-info,
-.profile-info-wrapper {
-  display: flex;
-  box-sizing: border-box;
-  max-width: 100%;
-}
-.profile-info {
-  width: 411px;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: var(--br-xl);
-  background-color: var(--color-whitesmoke-200);
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-start;
-  padding: 24.8px 0;
-  gap: var(--gap-xs);
-}
-.profile-info-wrapper {
-  align-self: stretch;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 0 var(--padding-2xl) 168px var(--padding-xl);
-  text-align: center;
-  font-size: var(--font-size-21xl);
-  color: var(--color-black);
-  font-family: var(--font-raleway);
-}
-.background-icon {
-  width: 371px;
-  position: relative;
-  max-height: 100%;
-  object-fit: contain;
-  max-width: 100%;
-}
-.setting {
+.top_frame {
   width: 100%;
-  position: relative;
-  background-color: var(--palette-white);
+  height: 89px;
+  background: rgba(217,217,217,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border: 1px solid rgba(0,0,0,1);
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-start;
-  gap: var(--gap-20xl);
-  line-height: normal;
-  letter-spacing: normal;
 }
-@media screen and (max-width: 825px) {
-  .frame-header {
-    gap: var(--gap-233xl);
-    padding-left: var(--padding-13xl);
-    padding-right: var(--padding-13xl);
-    box-sizing: border-box;
-  }
-  .brain {
-    font-size: var(--font-size-13xl);
-    line-height: 26px;
-  }
-  .setting {
-    gap: var(--gap-lgi);
-  }
+.main_page {
+  display: inline-block;
+  min-width: 101px;
+  color: rgba(0,0,0,1);
+  position: absolute;
+  top: 14px;
+  left: 65px;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: bold;
+  font-size: 50px;
+  opacity: 1;
+  text-align: left;
 }
-@media screen and (max-width: 675px) {
-  .profile-info-wrapper {
-    padding-bottom: 109px;
-    box-sizing: border-box;
-  }
+.setting_title {
+  width: 100px;
+  color: rgba(0,0,0,1);
+  position: absolute;
+  top: 14px;
+  left: 670px;
+  text-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
+  font-family: Inter;
+  font-weight: bold;
+  font-size: 50px;
+  opacity: 1;
+  text-align: center;
 }
-@media screen and (max-width: 450px) {
-  .frame-header {
-    gap: 126px;
-  }
-  .brain {
-    font-size: var(--font-size-5xl);
-    line-height: 19px;
-  }
-  .juliamariomailcom {
-    font-size: var(--presets-body2-size);
-    line-height: 14px;
-  }
+
+.user_frame a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.user_frame a:hover{
+    color: dodgerblue;
+}
+
+.profile-frame {
+  width: 411px;
+  height: 318px;
+  background: rgba(247,247,247,1);
+  margin: 12px;
+  opacity: 1;
+  position: absolute;
+  top: 128px;
+  left: 514px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+}
+.self-photo {
+  width: 145px;
+  height: 139px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 24px;
+  left: 133px;
+  border: 8px solid rgba(255,255,255,1);
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.10000000149011612);
+  overflow: hidden;
+}
+.self-photo image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.edit {
+  width: 41px;
+  height: 43px;
+  background: rgba(255,255,255,1);
+  padding: 8px 8px;
+  margin: 10px;
+  opacity: 1;
+  position: absolute;
+  top: 175px;
+  left: 184px;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1599999964237213);
+  overflow: hidden;
+}
+.name {
+  color: #fff;
+}
+.self-name {
+  width: 411px;
+  color: rgba(0,0,0,1);
+  position: absolute;
+  top: 250px;
+  left: 0px;
+  font-family: Raleway;
+  font-weight: Bold;
+  font-size: 40px;
+  opacity: 1;
+  text-align: center;
+}
+.v114_127 {
+  width: 411px;
+  color: rgba(0,0,0,1);
+  position: absolute;
+  top: 275px;
+  left: 0px;
+  font-family: Raleway;
+  font-weight: bold;
+  font-size: 20px;
+  opacity: 1;
+  text-align: center;
+}
+.v121_267 {
+
+  background-image: url("static/image/v121_267.png");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 627px;
+  left: 1040px;
+  overflow: hidden;
+}
+.v307_1830 {
+  width: 559px;
+  height: 509px;
+  background-image: url("static/image/v307_1830.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 480px;
+  left: 440px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+}
+.v307_1831 {
+  width: 559px;
+  height: 509px;
+  background-image: url("/static/image/v307_1831.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+
+}
+.v307_1832 {
+  width: 559px;
+  height: 509px;
+  background: rgba(247,247,247,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  box-shadow: 0px 10px 40px rgba(0.11372549086809158, 0.08627451211214066, 0.09019608050584793, 0.07000000029802322);
+  overflow: hidden;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.v307_1864 {
+  width: 540px;
+  height: 42px;
+  background: rgba(247,247,247,1);
+  margin: 24px;
+  opacity: 1;
+  position: absolute;
+  top: 38px;
+  left: 10px;
+  overflow: hidden;
+}
+.name {
+  color: #ff1493;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+
+.container {
+    display: flex;
+    width: 500px;
+    height:450px;
+    opacity: 1;
+    position: absolute;
+    top: 500px;
+    left: 485px;
+    overflow: hidden;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius:10px
+}
+
+/* 側邊欄樣式 */
+.sidebar {
+    width: 500px;
+    background-color: #f4f4f4;
+    padding: 20px;
+}
+
+/* 主要內容區域樣式 */
+main {
+    flex: 1;
+    padding: 20px;
+}
+
+/* 折疊式選單樣式（保留原有樣式） */
+.folding-menu {
+    width: 460px;
+}
+
+.folding-menu ul {
+    list-style-type: none;
+}
+
+.folding-menu li {
+    border-bottom: 1px solid #ddd;
+}
+
+.folding-menu li a{
+    color: #4B0082;
+}
+
+.folding-menu a {
+    display: block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s;
+}
+
+.folding-menu a:hover {
+    background-color: #e0e0e0;
+}
+
+.folding-menu i {
+    margin-right: 10px;
+}
+
+.folding-menu .acc-options {
+    display: none;
+    padding-left: 20px;
+}
+
+.folding-menu .acc.active > .acc-options {
+    display: block;
+}
+
+.folding-menu .acc-options li {
+    border-bottom: none;
+}
+
+.folding-menu .acc > a {
+    position: relative;
+}
+
+.folding-menu .invite-options {
+    display: none;
+    padding-left: 20px;
+}
+
+.folding-menu .invite.active > .invite-options {
+    display: block;
+}
+
+.folding-menu .invite-options li{
+    border-bottom: none;
+}
+
+.folding-menu .invite > a {
+    position: relative;
+}
+
+.folding-menu .notification-options {
+    display: none;
+    padding-left: 35px;
+}
+
+.folding-menu .notification.active > .notification-options {
+    display: block;
+}
+
+.folding-menu .notification-options li{
+    border-bottom: none;
+}
+
+.folding-menu .notification > a {
+    position: relative;
+}
+
+.folding-menu .arrow {
+    position: absolute;
+    right: 30px;
+    rotate:270deg;
+    transition: transform 0.3s;
+    color: #4B0082;
+}
+
+.container .acc.active > a .arrow {
+    transform: rotate(90deg);
+}
+
+.folding-menu .notification .arrow {
+    position: absolute;
+    right: 30px;
+    rotate:270deg;
+    transition: transform 0.3s;
+    color: #4B0082;
+}
+
+.container .notification.active > a .arrow {
+    transform: rotate(90deg);
+}
+
+.folding-menu .friend-list .arrow {
+    position: absolute;
+    right: 50px;
+    rotate:270deg;
+    transition: transform 0.3s;
+    color: #4B0082;
+}
+
+.folding-menu .safety .arrow {
+    position: absolute;
+    right: 50px;
+    rotate:270deg;
+    transition: transform 0.3s;
+    color: #4B0082;
+}
+
+.folding-menu .invite .arrow {
+    position: absolute;
+    right: 30px;
+    rotate:270deg;
+    transition: transform 0.3s;
+    color: #4B0082;
+}
+
+.container .invite.active > a .arrow {
+    transform: rotate(90deg);
+}
+
+.folding-menu .language .arrow {
+    position: absolute;
+    right: 50px;
+    rotate:270deg;
+    transition: transform 0.3s;
+    color: #4B0082;
+}
+
+.circle:before {
+  content: "\2022";  /* Unicode 字符代碼,表示實心圓點 */
+  color: #4B0082;      /* 設置顏色為黑色 */
+  font-weight: bold; /* 加粗使圓點更明顯 */
+  display: inline-block;
+  width: 1em;        /* 設置寬度 */
+  margin-left: -1em; /* 調整位置 */
+}
+
+.toggle-option {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    color: #4B0082;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 17px;
+    right: 50px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 11px;
+    width: 11px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+    transform: translateX(13px);
+}
+
+.slider.round {
+    border-radius: 20px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+#copyButton {
+  border: none;
+  cursor: pointer;
+}
+
+.share-icons button{
+    width:30px;
+    height:30px;
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+}
+
+.share-icons a{
+    width:60px;
+    height:30px;
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+}
+
+.share-popup{
+    margin-left: 30px;
 }
