--- a/templates/password-change.html
+++ b/templates/password-change.html
@@ -6,10 +6,11 @@
     <title>ChangePassword</title>
 </head>
 <body>
-    <header>
-        <a href="#" id="main_page" class="home-link">首頁</a>
-        <h1>設定</h1>
-    </header>
+    <div class="user_frame">
+        <div class="top_frame">
+        <a class="main_page" id="main_page" href="#">首頁</a>
+            <span class="setting_title">設定</span>
+        </div>
 
     <main role="main">
 
