--- a/templates/main-page.html
+++ b/templates/main-page.html
@@ -25,385 +25,113 @@
   </head>
   <body>
     <div class="main-page">
+      <!-- 頁首部分，包含導航欄 -->
       <header class="frame">
         <div class="wrapper">
           <a class="a">首頁</a>
         </div>
-        <div class="frame-inner">
-          <div class="group-parent">
-            <img class="group-icon1" alt="" src="{{url_for('static', filename='image/group1.svg')}}" />
-            <div class="search-wrapper">
-              <input class="search" placeholder="Search" type="text" />
-            </div>
-          </div>
-        </div>
-        <div class="frame-div">
-          <div class="parent2">
-            <a class="a1" id="text1" href="#">設定</a>
-            <div class="wrapper1">
-              <a class="a2" id="text2">個人資料</a>
-            </div>
-          </div>
+        <div class="parent2">
+          <a class="a1" id="text1" href="#">設定</a>
+          <a class="a2" id="text2" href="#">個人資料</a>
         </div>
       </header>
-      <div class="main-page-child"></div>
+  
+      <!-- 主內容區域 -->
       <main class="main-page-inner">
         <section class="frame-section">
-          <div class="frame-wrapper1">
-            <div class="frame-parent1">
-              <div class="image-container-wrapper">
-                <div class="image-container">
-                  <img
-                    class="e355dc75c2e90373cb295-hero20v-icon3"
-                    loading="lazy"
-                    alt=""
-                    src="{{ url_for('static', filename='image/627e355dc75c2e90373cb295-hero20visualp1600png@2x.png') }}"
-                  />
-
-                  <div class="figtext1"></div>
-                </div>
-              </div>
-              <div class="wrapper2">
-                <div class="div11">情感分析聊天對話助手</div>
-              </div>
-              <div class="frame-parent2">
-                <textarea
-                  class="frame-textarea"
-                  placeholder="歡迎來到MBTI情感分析助手！在這裡我們將幫你更好理解和解讀您與他人的聊天對話"
-                  rows="{2}"
-                  maxlength="{5}"
-                  cols="{2}"
-                >
-                </textarea>
-                <div class="frame-wrapper2">
-                  <div class="left-button-icon-parent">
-                    <img
-                      class="left-button-icon"
-                      loading="lazy"
-                      alt=""
-                      src="{{url_for('static', filename='image/vector.svg')}}"
-                    />
-
-                    <img
-                      class="right-button-icon"
-                      alt=""
-                      src="{{url_for('static', filename='image/vector1.svg')}}"
-                    />
-                  </div>
-                </div>
-              </div>
+          <div class="image-container-wrapper">
+            <div class="image-container">
+              <!-- 主視覺圖片 -->
+              <img
+                class="main-hero-image"
+                alt="情感分析主圖"
+                src="{{ url_for('static', filename='image/main.png') }}"
+              />
             </div>
           </div>
-          <div class="frame-parent3">
-            <div class="frame-wrapper3">
-              <div class="frame-parent4">
-                <div class="frame-wrapper4">
-                  <button class="emotion-icon-parent">
-                    <div class="emotion-icon" id="emotionIcon"></div>
-                      <div class="div12" href="#">使用介紹</div>
-                  </button>
-                </div>
-                <div class="analysis-icons">
-                  <div class="m-b-t-iicon" id="mBTIicon"></div>
-                    <div class="mbti"><a href="https://www.16personalities.com/tw/%E6%80%A7%E6%A0%BC%E6%B8%AC%E8%A9%A6" target="_blank" rel="noopener noreferrer">{{ ('MBTI測驗') }}</a></div>
-                </div>
-                <div class="analysis-icons1">
-                  <div class="analysis-icons-child" id="ellipse"></div>
-                  <div class="div13" href="#">CHAT</div>
-                </div>
-              </div>
-            </div>
-            <div class="first-connection-parent">
-              <div class="first-connection">
-                <img
-                  class="first-connection-icons"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-2.svg')}}"
-                />
-
-                <img
-                  class="connection-icon"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-3.svg')}}"
-                />
-
-                <img
-                  class="connection-icon1"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-4.svg')}}"
-                />
-
-                <img
-                  class="first-connection-icons1"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-5.svg')}}"
-                />
-
-                <img
-                  class="connection-icon2"
-                  alt=""
-                  src="./public/vector-6.svg"
-                />
-
-                <img
-                  class="connection-icon3"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-7.svg')}}"
-                />
-
-                <div class="connection-icon4">
-                  <img
-                    class="connection-icon-pair"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-8.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon5"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-9.svg')}}"
-                  />
-                </div>
-                <div class="second-connection">
-                  <img
-                    class="connection-icon6"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-10.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon7"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-11.svg')}}"
-                  />
-
-                  <img
-                    class="second-connection-icons"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-12.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon8"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-13.svg')}}"
-                  />
-
-                  <img
-                    class="second-connection-icons1"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-14.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon9"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-15.svg')}}"
-                  />
-                </div>
-                <div class="third-connection">
-                  <img
-                    class="connection-icon10"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-16.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon11"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-17.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon12"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-18.svg')}}"
-                  />
-                </div>
-                <div class="fourth-connection">
-                  <img
-                    class="connection-icon13"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-19.svg')}}"
-                  />
-
-                  <img
-                    class="fourth-connection-icons"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-20.svg')}}"
-                  />
-
-                  <img
-                    class="fourth-connection-icons1"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-21.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon14"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-22.svg')}}"
-                  />
-                </div>
-                <img
-                  class="connection-icon15"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-23.svg')}}"
-                />
-
-                <img
-                  class="connection-icon16"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-24.svg')}}"
-                />
-
-                <img
-                  class="connection-icon17"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-25.svg')}}"
-                />
-
-                <div class="fifth-connection">
-                  <img
-                    class="connection-icon18"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-26.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon19"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-27.svg')}}"
-                  />
-
-                  <img
-                    class="fifth-connection-icons"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-28.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon20"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-29.svg')}}"
-                  />
-
-                  <img
-                    class="fifth-connection-icons1"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-30.svg')}}"
-                  />
-                </div>
-                <div class="sixth-connection">
-                  <img
-                    class="connection-icon21"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-31.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon22"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-32.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-33.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons1"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-34.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon23"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-35.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons2"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-36.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons3"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-37.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons4"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-37.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons5"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-37.svg')}}"
-                  />
-                </div>
-                <img
-                  class="connection-icon24"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-40.svg')}}"
-                />
-              </div>
-              <div class="footer-content-wrapper">
-                <img
-                  class="footer-content-icon"
-                  loading="lazy"
-                  alt=""
-                  src="{{url_for('static', filename='image/frame.svg')}}"
-                />
-              </div>
-            </div>
+  
+          <!-- 主標題區 -->
+          <div class="wrapper2">
+            <div class="div11">情感分析對話助手</div>
           </div>
-        </section>
-      </main>
-    </div>
+  
+          <!-- 說明文本 -->
+          <div class="description">
+            歡迎來到 MBTI 情感分析助手！在這裡我們將利用 MBTI 幫你更好理解和解讀您與他人的聊天對話。
+          </div>
+  
+<!-- 按鈕區域 -->
+<div class="buttons-container">
+  <!-- 情感分析按鈕 -->
+  <div class="button-wrapper">
+    <button class="action-button" id="emotionIcon">
+      <img src="{{ url_for('static', filename='image/emotion-icon.png') }}" alt="情感分析" />
+      <span>情感分析</span>
+    </button>
+  </div>
 
-    <script>
-      var text1 = document.getElementById("text1");
-      if (text1) {
-        text1.addEventListener("click", function (e) {
-          window.location.href = "{{ url_for('setting') }}";
-        });
-      }
-      
-      var text2 = document.getElementById("text2");
-      if (text2) {
-        text2.addEventListener("click", function (e) {
-          window.location.href = "{{ url_for('profile') }}";
-        });
-      }
-      
-      var emotionIcon = document.getElementById("emotionIcon");
-      if (emotionIcon) {
-        emotionIcon.addEventListener("click", function (e) {
-          window.location.href = "{{ url_for('sentiment_analysis') }}";
-        });
-      }
-      
-      var mBTIicon = document.getElementById("mBTIicon");
-      if (mBTIicon) {
-        mBTIicon.addEventListener("click", function (e) {
-          window.location.href = "{{ url_for('mbticlassification') }}";
-        });
-      }
-      
-      var ellipse = document.getElementById("ellipse");
-      if (ellipse) {
-        ellipse.addEventListener("click", function (e) {
-          window.location.href = "{{ url_for('chat.chat_room') }}";
-        });
-      }
-      </script>
+<!-- MBTI測驗按鈕 -->
+<div class="button-wrapper">
+  <button class="action-button" id="mBTIicon">
+    <img src="{{ url_for('static', filename='image/mbti-icon.png') }}" alt="MBTI 測驗" />
+    <span>MBTI測驗</span>
+  </button>
+</div>
+
+  <!-- 聊天室按鈕 -->
+  <div class="button-wrapper">
+    <button class="action-button" id="ellipse">
+      <img src="{{ url_for('static', filename='image/chat.png') }}" alt="聊天室" />
+      <span>聊天室</span>
+    </button>
+  </div>
+</div>
+
+</section>
+</main>
+</div>
+
+<script>
+  // 設定按鈕
+  var text1 = document.getElementById("text1");
+  if (text1) {
+    text1.addEventListener("click", function (e) {
+      window.location.href = "{{ url_for('setting') }}";
+    });
+  }
+
+  // 個人資料按鈕
+  var text2 = document.getElementById("text2");
+  if (text2) {
+    text2.addEventListener("click", function (e) {
+      window.location.href = "{{ url_for('profile') }}";
+    });
+  }
+
+  // 情感分析按鈕
+  var emotionIcon = document.getElementById("emotionIcon");
+  if (emotionIcon) {
+    emotionIcon.addEventListener("click", function (e) {
+      window.location.href = "{{ url_for('sentiment_analysis') }}";
+    });
+  }
+
+  // MBTI測驗按鈕
+  var mBTIicon = document.getElementById("mBTIicon");
+  if (mBTIicon) {
+    mBTIicon.addEventListener("click", function (e) {
+      window.open("https://www.16personalities.com/tw/%E6%80%A7%E6%A0%BC%E6%B8%AC%E8%A9%A6", "_blank");
+    });
+  }
+
+  // 聊天室按鈕
+  var ellipse = document.getElementById("ellipse");
+  if (ellipse) {
+    ellipse.addEventListener("click", function (e) {
+      window.location.href = "{{ url_for('chat.chat_room') }}";
+    });
+  }
+</script>
+
   </body>
 </html>
