--- a/templates/profile-setting.html
+++ b/templates/profile-setting.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-    <header>
-        <a href="#" id="main_page" class="home-link">首頁</a>
-        <h1>個人資料</h1>
-    </header>
+  <div class="user_frame">
+    <div class="top_frame">
+    <a class="main_page" id="main_page" href="#">首頁</a>
+        <span class="setting_title">個人資料</span>
+    </div>
 
     <main role="main">
         <div class="container">
