--- a/templates/chat-room.html
+++ b/templates/chat-room.html
@@ -25,7 +25,7 @@
         </div>
         <div id="chat-window">
             <div id="chat-header">
-                <h2>聊天室</h2>
+                <h2 id="chat-title"></h2>
             </div>
             <div id="message-list" class="message-container">
                 <!-- 聊天訊息將在這裡動態生成 -->
